crates/uitest/fixtures/mir_check/borrowck_write_field_under_ref.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/borrowck_write_field_under_ref.fe
---
error[11-0002]: borrow conflict in `fn borrowck_write_field_under_ref`
   ┌─ borrowck_write_field_under_ref.fe:11:5
   │
10 │     let r: ref u256 = ref s.a
   │                           --- borrow created here
11 │     s.a = 2
   │     ^^^^^^^ cannot write through an active `ref` borrow
